fix: make the code cleaner and update tests